# arbitrary-precision-number

./: .gitignore  CMakeLists.txt  README.md
doc/: note.txt
src/: ap_number.h  consts.cpp  example.cpp  test.cpp
